Change Title, Remove Twitter, Remove Footer
Change title to my name
Remove Twitter
Remove Footer

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Astral by HTML5 UP</title>
+		<title>Ferdia O'Brien</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,11 +18,11 @@
 			<div id="wrapper">
 
 				<!-- Nav -->
-					<nav id="nav">
+				<nav id="nav">
 						<a href="#" class="icon fa-home"><span>Home</span></a>
 						<a href="#work" class="icon fa-folder"><span>Work</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
-						<a href="https://twitter.com/ajlkn" class="icon fa-twitter"><span>Twitter</span></a>
+						<!--	<a href="https://twitter.com/ajlkn" class="icon fa-twitter"><span>Twitter</span></a> -->
 					</nav>
 
 				<!-- Main -->
@@ -123,11 +123,11 @@
 					</div>
 
 				<!-- Footer -->
-					<div id="footer">
+				<!--	<div id="footer">
 						<ul class="copyright">
 							<li>&copy; Untitled.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
-					</div>
+					</div> -->
 
 			</div>
 
