Picture of my face

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpg" alt="" />
+									<img src="images/my_grad_head.jpg" alt="" />
 								</a>
 							</article>
 
@@ -46,9 +46,7 @@
 									<h2>Work</h2>
 								</header>
 								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
+									4th year engineering student
 								</p>
 								<section>
 									<div class="row">
