Change work heading, add formspree

--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 								</header>
 								<a href="#work" class="jumplink pic">
 									<span class="arrow icon fa-chevron-right"><span>See my work</span></span>
-									<img src="images/my_grad_head.jpg" alt="" />
+									<img src="images/grad pic ed.jpg" alt="" />
 								</a>
 							</article>
 
-						<!-- Work -->
-							<article id="work" class="panel">
+						<!-- About Me -->
+							<article id="test" class="panel">
 								<header>
-									<h2>Work</h2>
+									<h2>About Ferdia</h2>
 								</header>
 								<p>
 									4th year engineering student
@@ -95,7 +95,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
-								<form action="#" method="post">
+								<form action="https://formspree.io/ferdiahobrien@gmail.com" method="post">
 									<div>
 										<div class="row">
 											<div class="col-6 col-12-medium">
