change 'Work' heading to 'About Ferdia'

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Nav -->
 				<nav id="nav">
 						<a href="#" class="icon fa-home"><span>Home</span></a>
-						<a href="#work" class="icon fa-folder"><span>Work</span></a>
+						<a href="#work" class="icon fa-folder"><span>About Ferdia</span></a>
 						<a href="#contact" class="icon fa-envelope"><span>Contact</span></a>
 						<a href="https://www.linkedin.com/in/ferdia-obrien/" class="icon fa-linkedin"><span>LinkedIn</span></a>
 					</nav>
@@ -41,7 +41,7 @@
 							</article>
 
 						<!-- About Me -->
-							<article id="test" class="panel">
+							<article id="work" class="panel">
 								<header>
 									<h2>About Ferdia</h2>
 								</header>
