--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ferdia O'Brien, BSc Eng</title>
+		<title>Ferdia O'Brien</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,7 +31,7 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Ferdia O'Brien</h1>
+									<h1>Ferdia O'Brien, BSc Eng</h1>
 									<p>Electrical Engineering Student</p>
 								</header>
 								<a href="#work" class="jumplink pic">
