--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<!-- Me -->
 							<article id="home" class="panel intro">
 								<header>
-									<h1>Ferdia O'Brien, BSc Eng</h1>
+									<h1>Ferdia O'Brien</h1>
 									<p>Electrical Engineering Student</p>
 								</header>
 								<a href="#work" class="jumplink pic">
