--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 								</p>
 								<section>
 									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
+										<!-- <div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
+										</div> -->
 										<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 										</div>
