about ferdia: add back one image

--- a/index.html
+++ b/index.html
@@ -46,14 +46,16 @@
 									<h2>About Ferdia</h2>
 								</header>
 								<p>
-									4th year engineering student
+							4th year student pursuing a Master of Electrical Energy Engineering degree in University College Dublin (UCD).
+
+							I completed a 3-year BSc (Engineering Science) in UCD majoring in electronic engineering. Then, upon serious reflection, I realised that my primary interest was in power systems and I decided to change direction from electronic to electrical.
 								</p>
 								<section>
 									<div class="row">
-										<!-- <div class="col-4 col-6-medium col-12-small">
+									 <div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
 										</div>
-										<div class="col-4 col-6-medium col-12-small">
+											<!--<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
