--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 								<header>
 									<h2>About Ferdia</h2>
 								</header>
-								<p>
-							4th year student pursuing a Master of Electrical Energy Engineering degree in University College Dublin (UCD).
+								<p> 4th year student pursuing a Master of Electrical Energy Engineering degree in University College Dublin (UCD).	</p>
 
-							I completed a 3-year BSc (Engineering Science) in UCD majoring in electronic engineering. Then, upon serious reflection, I realised that my primary interest was in power systems and I decided to change direction from electronic to electrical.
+							<p> I completed a 3-year BSc (Engineering Science) in UCD majoring in electronic engineering. Then, upon serious reflection, I realised that my primary interest was in power systems and I decided to change direction from electronic to electrical. </p>
+
+							<p> Why? </p>
 								</p>
 								<section>
 									<div class="row">
