--- a/index.html
+++ b/index.html
@@ -50,8 +50,9 @@
 							<p> I completed a 3-year BSc (Engineering Science) in UCD majoring in electronic engineering. Then, upon serious reflection, I realised that my primary interest was in power systems and I decided to change direction from electronic to electrical. </p>
 
 							<p> Why? As a species racing to halt global climate change, we require a revolution in our energy systems. That is both an ecological and social imperative and an opportunity to solve some of the most interesting technical challenges of modern times.
-								Power system design and operation itself has been perturbed and must find a new equilibrium point where conventional generation is largely displaced by variable renewable energy technologies.
-							The integration of these variable sources imposes the need for a new grid control paradigm in order to efficiently meet daily energy demand and maintain system stability.
+								Power system design and operation itself has been perturbed and must find a new equilibrium point where conventional generation is largely displaced by variable renewable energy technologies, technologies which are constantly in the flux of innovation.	</p>
+
+							<p>The integration of these variable sources imposes the need for a new grid control paradigm in order to efficiently meet daily energy demand and maintain system stability.
 						The electrical grid in Europe alone is said to be the most complex structure ever created by humanity, so what we are witnessing is nothing less than the radical re-ordering of the most complex artificial system on planet Earth, and that excites me as much as landing on the moon.</p>
 								</p>
 								<section>
