text and test image

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								</header>
 								<p> 4th year student pursuing a Master of Electrical Energy Engineering degree in University College Dublin (UCD).	</p>
 
-							<p> I completed a 3-year BSc (Engineering Science) in UCD majoring in electronic engineering. Then, upon serious reflection, I realised that my primary interest was in power systems and I decided to change direction from electronic to electrical. </p>
+							<p> I completed a 3-year BSc (Engineering Science) in UCD majoring in electronic engineering. Then, upon serious reflection, I realised that my primary interest was in power systems and decided to change direction from electronic to electrical. </p>
 
 							<p> Why? As a species racing to halt global climate change, we require a revolution in our energy systems. That is both an ecological and social imperative and an opportunity to solve some of the most interesting technical challenges of modern times.
 								Power system design and operation itself has been perturbed and must find a new equilibrium point where conventional generation is largely displaced by variable renewable energy technologies, technologies which are constantly in the flux of innovation.	</p>
@@ -55,10 +55,12 @@
 							<p>The integration of these variable sources imposes the need for a new grid control paradigm in order to efficiently meet daily energy demand and maintain system stability.
 						The electrical grid in Europe alone is said to be the most complex structure ever created by humanity, so what we are witnessing is nothing less than the radical re-ordering of the most complex artificial system on planet Earth, and that excites me as much as landing on the moon.</p>
 								</p>
+
+							<!--	That and the primal allure of the generation and transmission of large quantities of energy - defining the possibility for change in the universe - makes electrical engineering a compelling choice for me.-->
 								<section>
 									<div class="row">
 									 <div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
+											<a href="#" class="image fit"><img src="images/ghg_path.png" alt=""></a>
 										</div>
 											<!--<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
