--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 									<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/wind_turb.jpg" alt=""></a>
 										</div>
-												<!--<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
+									div class="col-4 col-6-medium col-12-small">
+											<a href="#" class="image fit"><img src="images/FACTS.gif" alt=""></a>
 										</div>
-										<div class="col-4 col-6-medium col-12-small">
+													<!--<<div class="col-4 col-6-medium col-12-small">
 											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
 										</div>
 										<div class="col-4 col-6-medium col-12-small">
